--- a/template.html
+++ b/template.html
@@ -9,6 +9,11 @@
 		<link rel="shortcut icon" type="image/ico" href="/icon.ico">
 		<script defer type="text/javascript" src="/app.js"></script>
 
+		<meta content="rockofdestiny.com:/about" property="og:title"/>
+		<meta content="it/doe/she; demigirl &#x0A; belongs to winti <3 &#x0A; it worker and rare scripter, hobbies include struggling with arch and nerding over guns." property="og:description"/>
+		<meta content="https://rockofdestiny.com/media/icon.png" property="og:image"/>
+		<meta content="#11d116" data-react-helmet="true" name="theme-color" />
+
 		<link rel="me" href="https://kolektiva.social/@keystroke">
 		<script>0</script>
 	</head>
